--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
+    "material-ui": "^0.16.4",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3",
+    "react-dom": "^0.14.8",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.0.4"
   }
 }
