--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "material-ui": "^0.16.4",
     "react": "^0.14.3",
     "react-dom": "^0.14.8",
+    "react-dropdown": "^1.2.0",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
-    "react-tap-event-plugin": "^2.0.1",
+    "react-select": "^1.0.0-rc.2",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.0.4"
   }
 }
