--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "react-select": "^1.0.0-rc.2",
+    "react-tab": "^1.0.0",
+    "react-tabs": "^0.8.2",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.0.4"
   }
