--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-preset-react": "^6.1.18",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
+    "eslint": "^3.14.1",
+    "eslint-config-google": "^0.7.1",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
